[package]
name = "calr"
version = "0.1.0"
authors = ["rsookram <rashadsookram@gmail.com>"]
edition = "2018"
description = "Command-line tool which displays a calendar"
readme = "README.md"
repository = "https://github.com/rsookram/calr"
license = "MIT OR Apache-2.0"
keywords = ["calendar"]
categories = ["command-line-utilities"]

[dependencies]
pico-args = "0.5"
time = {version = "0.3", features = ["local-offset"]}

[profile.release]
lto = true
codegen-units = 1
